--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ue-civic",
-  "version": "2.1.2",
+  "version": "2.2.0",
   "description": "A microservice to proxy and stream data from teh googleapi civic public api.",
   "private": false,
   "scripts": {
@@ -41,6 +41,7 @@
     "babel-preset-env": "^1.6.1",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.13.2",
+    "connect-timeout": "^1.9.0",
     "cookie-parser": "^1.3.5",
     "debug": "^2.2.0",
     "es6-promisify": "^5.0.0",
