--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "nodemon ./src/bin/start.js",
     "dist": "nodemon ./dist/bin/start.js",
     "build": "yarn && babel src -d dist",
-    "package": "yarn && babel src -d dist && rm -rf ./node_modules/ && yarn --production && sls package",
-    "deploy": "yarn && babel src -d dist && rm -rf ./node_modules/ && yarn --production && sls deploy",
+    "package": "yarn && babel src -d dist && sls package",
+    "deploy": "yarn && babel src -d dist && sls deploy",
     "test": "mocha --recursive './src/test/*Test.js' --compilers js:babel-core/register",
     "lintFix": "eslint . --fix"
   },
@@ -54,8 +54,6 @@
     "passport-http-bearer": "^1.0.1",
     "pug": "^2.0.3",
     "request": "^2.88.0",
-    "serverless-apigw-binary": "^0.4.4",
-    "serverless-domain-manager": "^2.6.6",
     "serverless-http": "^1.8.0",
     "uuidv4": "^2.0.0",
     "yamljs": "^0.3.0"
@@ -66,6 +64,8 @@
     "chai": "^4.1.1",
     "chai-http": "^3.0.0",
     "eslint": "^4.5.0",
+    "serverless-apigw-binary": "^0.4.4",
+    "serverless-domain-manager": "^2.6.6",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
